pages signin and signup

--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
 
           <div class="col-4 col-xl-2 text-right">
             <div class="d-none d-xl-inline-block">
-              <button type="button" class="btn btn-primary">Login</button>
+              <a href="login.html" class="btn btn-primary">Login</a>
+                <br/>
+            <a href="signup.html" class="btn btn-primary">Create an account</a>
             </div>
           </div>         
       </div>
-      
-    </header>
+    </div>
+</header>
 
     <div class="slide-one-item home-slider owl-carousel">
       
