--- a/signup.html
+++ b/signup.html
@@ -67,7 +67,7 @@
 
           <div class="col-4 col-xl-2 text-right">
             <div class="d-none d-xl-inline-block">
-              <button type="button" class="btn btn-primary">Login</button>
+              <a href="login.html" class="btn btn-primary">Login</a>
             </div>
           </div>         
       </div>
