Minor change to index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   <img src="images/img_1.jpg" alt="Image" class="img-md-fluid">
                 </div>
                 <div class="overlap-left col-lg-6 bg-white p-md-5 align-self-center">
-                  <p class="text-black lead">&ldquo;Do we wanna keep this????&rdquo;</p>
+                  <p class="text-black lead">&ldquo;I find LocalGreeters very easy to use and helped me have an authentic experience!&rdquo;</p>
                   <p class="">&mdash; <em>James Martin</em>, <a href="#">Traveler</a></p>
                 </div>
               </div>
@@ -176,7 +176,7 @@
                   <img src="images/img_2.jpg" alt="Image" class="img-md-fluid">
                 </div>
                 <div class="overlap-left col-lg-6 bg-white p-md-5 align-self-center">
-                  <p class="text-black lead">&ldquo;Do we wanna keep this????&rdquo;</p>
+                  <p class="text-black lead">&ldquo;Thanks to LocalGreeters, I had an authentic experience touring around my dream city!&rdquo;</p>
                   <p class="">&mdash; <em>Clair Augustin</em>, <a href="#">Traveler</a></p>
                 </div>
               </div>
